# agentic-browser

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  NOTICE  PACKAGING.md  PACKAGING_PLAN.md  README.md  applicationdesign.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  run.sh  skills-lock.json
agenticbrowser/: __init__.py  agent.py  artifacts.py  config.py  events.py  history.py  install.py  models.py  models_registry.py  providers.py  recorder.py  registry.py  runner.py  sdk.py  session.py  stores.py
agenticbrowser/adapters/: __init__.py  pydantic_ai.py
agenticbrowser/mcp/: __init__.py  server.py
agenticbrowser/server/: auth.py  crypto.py  evals.py  gateway.py  settings.py  store_sql.py
app/: __init__.py  agent.py  config.py  gateway.py  models.py  models_registry.py  providers.py  recorder.py  registry.py  runner.py  session.py  store.py
docs/: approval-gate-design.md  mcp.md  sdk.md  self-host.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuditView.jsx  Chat.jsx  LiveView.jsx  NewSessionModal.jsx  Settings.jsx  Workspace.jsx  api.js  auth.jsx  styles.css  theme.jsx
frontend/src/chat/: ApprovalModal.jsx  ChatPanel.jsx  Composer.jsx  MiniChat.jsx  StepShot.jsx  TurnTrail.jsx  chatReducer.js  usage.jsx  useChat.js
frontend/src/live/: LivePanel.jsx
infra/: Dockerfile  docker-compose.yml  run.sh
tests/: test_adapter_pydantic_ai.py  test_approval_gate.py  test_event_contract.py  test_mcp.py  test_no_env_keys.py  test_sdk.py  test_store_conformance.py
